--- a/src/Components/CusttomButton/custtom-button.scss
+++ b/src/Components/CusttomButton/custtom-button.scss
@@ -12,12 +12,12 @@
   outline: none;
   &:hover {
     background-color: white;
-    color: #007fff;
+    color: #14557b;
     cursor: pointer;
   }
 }
 .inverted {
-  background-color: #007ff0;
+  background-color: #14557b;
   color: white;
   border: 1px solid transparent;
   border-radius: 10px;
