--- a/src/Components/note-form/note-form.scss
+++ b/src/Components/note-form/note-form.scss
@@ -1,3 +1,10 @@
+.svbb {
+  width: 100px;
+  height: 30px;
+  margin-bottom: 50px;
+  margin-left: 350px;
+}
+
 .note {
   display: flex;
   margin: 10px;
