--- a/src/Components/task-discription/task-discription.scss
+++ b/src/Components/task-discription/task-discription.scss
@@ -20,7 +20,7 @@
   .state {
     align-self: flex-end;
     font-size: 25px;
-    color: #007fff;
+    color: #14557b;
     cursor: pointer;
   }
 }
