--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,7 +1,8 @@
 .header {
   width: 100%;
   height: 60px;
-  background-color: #007fff;
+  background-color: #7fcec5;
+  background-image: linear-gradient(315deg, #7fcec5 0%, #14557b 74%);
   padding-bottom: 5px;
 
   .container {
@@ -19,7 +20,7 @@
   .empty {
     width: 50px;
     height: 50px;
-    background-color: #007fff;
+    background-color: #14557b;
     position: absolute;
     left: -20px;
     border-top-right-radius: 10px;
