--- a/src/Components/empty/empty.scss
+++ b/src/Components/empty/empty.scss
@@ -4,8 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 65%;
+  color: #fe0944;
   margin-top: 20px;
-  border-right: 1px solid #d0cfcf;
+  border-right: 1px solid #feae96;
   p {
     margin-bottom: 10px;
     opacity: 0.5;
@@ -13,11 +14,12 @@
 }
 .empty-discription {
   display: flex;
+  color: #14557b;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  border-right: 1px solid #d0cfcf;
+  border-right: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
   p {
     margin-bottom: 10px;
     opacity: 0.5;
