--- a/src/pages/tasks/tasks.scss
+++ b/src/pages/tasks/tasks.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   width: 65%;
   height: 510px;
-  border-right: 1px solid #d0cfcf;
+  border-right: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
   .tasks-header {
     width: 100%;
     height: 65px;
@@ -17,8 +17,8 @@
     align-items: center;
     background-color: white;
     text-align: left;
-    border-left: #007ff0 solid 7px;
-    border-bottom: 1px solid #d0cfcf;
+    border-left: #14557b solid 7px;
+    border-bottom: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
     padding: 0px 8px 0px 8px;
     font-family: "Secular One", sans-serif;
   }
@@ -35,7 +35,7 @@
     width: 100%;
     height: 45px;
     background-color: white;
-    border-top: 1px solid #d0cfcf;
+    border-top: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
     text-align: center;
     padding: 10px;
   }
@@ -45,6 +45,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #007ff0;
+  background-color: #14557b;
   border-radius: 25px;
 }
