--- a/src/pages/upcoming-events/upcoming-events.scss
+++ b/src/pages/upcoming-events/upcoming-events.scss
@@ -4,7 +4,7 @@
     padding: 30px;
     padding-top: 15px;
     padding-bottom: 0px;
-    border-bottom: 1px solid #d0cfcf;
+    border-bottom: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
     h1 {
       font-family: "Secular One", sans-serif;
     }
