--- a/src/Components/empty/empty.scss
+++ b/src/Components/empty/empty.scss
@@ -4,9 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 65%;
-  color: #fe0944;
+  color: #14557b;
   margin-top: 20px;
-  border-right: 1px solid #feae96;
+  border-right: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
   p {
     margin-bottom: 10px;
     opacity: 0.5;
