--- a/src/pages/signin-singup/signin-signup.scss
+++ b/src/pages/signin-singup/signin-signup.scss
@@ -15,3 +15,11 @@
     }
   }
 }
+.loggedin {
+  font-family: "Secular One", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+}
