--- a/src/Components/side-profile/side-profile.scss
+++ b/src/Components/side-profile/side-profile.scss
@@ -47,7 +47,7 @@
         display: flex;
         justify-content: space-between;
         font-family: "Roboto", sans-serif;
-        background-color: rgba($color: #14557b, $alpha: 0.88);
+        background-color: rgba($color: #007FFF, $alpha: 0.88);
         color: white;
         border-radius: 10px;
       }
