--- a/src/Components/task-form/task-form.scss
+++ b/src/Components/task-form/task-form.scss
@@ -22,6 +22,7 @@
         padding: 10px;
         border-style: solid;
         border-color: #d0cfcf;
+        border-width: 0.5px;
         outline: none;
         margin: 8px 0px 8px 0px;
       }
