--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,9 +1,10 @@
 .header {
   width: 100%;
   height: 60px;
-  background-color: #7fcec5;
-  background-image: linear-gradient(315deg, #7fcec5 0%, #14557b 74%);
+  // background-color: #7fcec5;
+  // background-image: linear-gradient(315deg, #7fcec5 0%, #14557b 74%);
   padding-bottom: 5px;
+  background-color: #007FFF;
 
   .container {
     display: flex;
@@ -20,10 +21,10 @@
   .empty {
     width: 50px;
     height: 50px;
-    background-color: #14557b;
     position: absolute;
     left: -20px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 150px;
+    background-color: #007FFF;
   }
 }
