--- a/src/Components/task/task.scss
+++ b/src/Components/task/task.scss
@@ -10,7 +10,7 @@
     padding-top: 6.5px;
     border-radius: 50px;
     border: 1px solid;
-    color: #7fcec5;
+    color: #007FFF;
   }
   .done {
     text-align: center;
@@ -20,7 +20,7 @@
     border-radius: 50px;
     border: 1px solid;
     color: white;
-    background-color: #14557b;
+    background-color: #007FFF;
   }
   .task-info {
     margin-left: 20px;
