--- a/src/pages/tasks/tasks.scss
+++ b/src/pages/tasks/tasks.scss
@@ -17,8 +17,8 @@
     align-items: center;
     background-color: white;
     text-align: left;
-    border-left: #14557b solid 7px;
-    border-bottom: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
+    border-left:#007FFF solid 7px;
+    border-bottom: 1px solid rgba($color: #007FFF, $alpha: 0.3);
     padding: 0px 8px 0px 8px;
     font-family: "Secular One", sans-serif;
   }
@@ -35,16 +35,17 @@
     width: 100%;
     height: 45px;
     background-color: white;
-    border-top: 1px solid rgba($color: #7fcec5, $alpha: 0.3);
+    border-top: 1px solid rgba($color: #007FFF, $alpha: 0.3);
     text-align: center;
     padding: 10px;
   }
 }
 ::-webkit-scrollbar {
   width: 8px;
+  display:  none;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #14557b;
+  background-color: #007FFF;
   border-radius: 25px;
 }
